Fix design of "sellos" in products/doors

--- a/src/app/pages/products/doors/doors.component.html
+++ b/src/app/pages/products/doors/doors.component.html
@@ -30,8 +30,6 @@
                   automáticamente a medida que el camión presiona el sello y se acopla al muelle de carga.</p>
                 <br>
                 <p class="mb-small">Los Sellos para muelle de carga son elementos básicos y de gran utilidad en los patios de maniobra. Éstos se pueden instalar en centros de distribución nuevos o adaptar en las plantas existentes.</p>
-                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
-                </p>
               </div>
             </div>
           </div>
@@ -42,23 +40,26 @@
           <div class="dark-mask custom_dark_mask"></div>
           <div class="container">
             <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">BENEFICIOS</h1>
+              </div>
+              </div>
+              <div class="row vertical_center_col">
               <div class="col-md-6">
-                <h2 class="text-uppercase">BENEFICIOS</h2>
-                <ul type=d isk style="font-size: 21px; font-weight: 400">
-                  <li> Los sellos para muelle evitan fugas de temperatura, entrada de aire, agua, polvo, insectos, etc. </li>
+                <ul type="none" class="list_custom" >
+                  <li> ■ &nbsp;  Los sellos para muelle evitan fugas de temperatura, entrada de aire, agua, polvo, insectos, etc. </li>
                   <br>
-                  <li> Son útiles para proteger y reducir hurto durante la carga y descarga de materiales o productos. </li>
-                  <br>
-                  <li> Reduce las pérdidas energéticas gracias a la separación efectiva de ambientes. </li>
-                  <br>
-                  <li> Protege el producto y al personal de condiciones ambientales. </li>
+                  <li> ■ &nbsp;  Son útiles para proteger y reducir hurto durante la carga y descarga de materiales o productos. </li>
                   <br>
                 </ul>
-                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
-                </p>
               </div>
-              <div class="col-md-6 text-center">
-                <img src="assets/img/sellos_para_muelles_de_carga/sellos_para_muelles_de_carga_1.png" alt="" class="img-responsive">
+              <div class="col-md-6">
+                <ul type="none" class="list_custom" >
+                  <li> ■ &nbsp;  Reduce las pérdidas energéticas gracias a la separación efectiva de ambientes. </li>
+                  <br>
+                  <li> ■ &nbsp;  Protege el producto y al personal de condiciones ambientales. </li>
+                  <br>
+                </ul>
               </div>
             </div>
           </div>
@@ -68,26 +69,29 @@
         <div class="jumbotron">
           <div class="dark-mask"></div>
           <div class="container">
-            <div class="row vertical_center_col">
-              <div class="col-md-6 text-center">
-                <img src="assets/img/sellos_para_muelles_de_carga/sellos_para_muelles_de_carga_2.png" alt="" class="img-responsive">
+          <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">PARTES</h1>
               </div>
+              </div>
+            <div class="row vertical_center_col">
+
               <div class="col-md-6">
-                <h2 class="text-uppercase">PARTES</h2>
-                <ul type=d isk style="font-size: 21px; font-weight: 400">
-                  <li> 2 Postes Verticales </li>
+                <ul type="none" class="list_custom"  >
+                  <li> ■ &nbsp;  2 Postes Verticales </li>
                   <br>
-                  <li> 1 Travesaño Horizontal (Parte superior) </li>
+                  <li> ■ &nbsp;  1 Travesaño Horizontal (Parte superior) </li>
                   <br>
-                  <li> 1 Travesaño Horizontal con topes internos (Parte inferior) </li>
+                  <li> ■ &nbsp;  1 Travesaño Horizontal con topes internos (Parte inferior) </li>
                   <br>
-                  <li> 1 Lona de Recubrimiento Superior </li>
+                  <li> ■ &nbsp; 1 Lona de Recubrimiento Superior </li>
                   <br>
-                  <li> Cubierta removible con elementos de fijación de alta calidad </li>
+                  <li> ■ &nbsp;  Cubierta removible con elementos de fijación de alta calidad </li>
                   <br>
                 </ul>
-                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
-                </p>
+              </div>
+                            <div class="col-md-6 text-center">
+                <img src="assets/img/sellos_para_muelles_de_carga/sellos_para_muelles_de_carga_2.png" alt="" class="img-responsive">
               </div>
             </div>
           </div>
@@ -97,25 +101,26 @@
         <div class="jumbotron">
           <div class="dark-mask custom_dark_mask"></div>
           <div class="container">
+          <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">ALETAS DE DESGASTE</h1>
+              </div>
+              </div>
             <div class="row vertical_center_col">
+                              <div class="col-md-6 text-center">
+                <img src="assets/img/sellos_para_muelles_de_carga/sellos_para_muelles_de_carga_3.png" alt="" class="img-responsive">
+              </div>
               <div class="col-md-6">
-                <h2 class="text-uppercase">ALETAS DE DESGASTE</h2>
                 <p class="mb-small">Para aumentar la vida útil de los sellos, se implementan aletas superpuestas a lo largo de las columnas aterales. Estas aletas absorben la abrasión que se produce en áreas de alto desgaste protegiendo las almohadillas del sello.</p>
                 <br>
                 <p class="mb-small">Las solapas de desgaste se encuentran disponibles con una exposición de:</p>
-                <br>
-                <ul class="list-inline" type=d isk style="font-size: 21px; font-weight: 400">
-                  <li> ■ 10 cm </li>
-                  <li> ■ 15 cm </li>
-                  <li> ■ 20cm </li>
+                <ul type="none" class="list_custom">
+                  <li> ■ &nbsp; 10 cm </li>
+                  <li> ■ &nbsp; 15 cm </li>
+                  <li> ■ &nbsp; 20 cm </li>
                 </ul>
-                <br>
-                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
-                </p>
               </div>
-              <div class="col-md-6 text-center">
-                <img src="assets/img/sellos_para_muelles_de_carga/sellos_para_muelles_de_carga_3.png" alt="" class="img-responsive">
-              </div>
+
             </div>
           </div>
         </div>
@@ -126,10 +131,9 @@
           <div class="container">
             <div class="row vertical_center_col">
               <div class="col-sm-12 text-center">
-                <h2 class="text-uppercase">COMPENSACIÓN DE DESNIVEL</h2>
+                <h1 class="text-uppercase">COMPENSACIÓN DE DESNIVEL</h1>
                 <p class="mb-small">La fabricación de cada sello para muelle de carga, se realiza especifícamente para satisfacer las condiciones de inclinación o declinación de la zona.</p>
                 <br>
-                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
               </div>
             </div>
             <div class="row vertical_center_col">
@@ -144,11 +148,14 @@
         <div class="jumbotron">
           <div class="dark-mask custom_dark_mask"></div>
           <div class="container">
+          <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">CUBIERTA REMOVIBLE</h1>
+              </div>
+              </div>
             <div class="row vertical_center_col">
               <div class="col-md-6">
-                <h2 class="text-uppercase">CUBIERTA REMOVIBLE</h2>
                 <p class="mb-small">Las aletas de desgaste se encuentran dispuestas en una cubierta removible; con elementos de fijación de alta calidad. Lo cual permite el reemplazo de partes por daño o desgaste, sin realizar el desmonte del sello.</p>
-                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
               </div>
               <div class="col-md-6 text-center">
                 <img src="assets/img/sellos_para_muelles_de_carga/sellos_para_muelles_de_carga_5.png" alt="" class="img-responsive">
@@ -161,14 +168,17 @@
         <div class="jumbotron">
           <div class="dark-mask"></div>
           <div class="container">
+          <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">ACCESORIOS DE INSTALACIÓN</h1>
+              </div>
+              </div>
             <div class="row vertical_center_col">
               <div class="col-md-6 text-center">
                 <img src="assets/img/sellos_para_muelles_de_carga/sellos_para_muelles_de_carga_6.png" alt="" class="img-responsive">
               </div>
               <div class="col-md-6">
-                <h2 class="text-uppercase">ACCESORIOS DE INSTALACIÓN</h2>
                 <p class="mb-small">La instalación de los sellos para muelles de carga se realiza de forma sencilla y rápida, ya que cuenta con accesorios que la facilitan y brindan un acabado estético de calidad.</p>
-                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
               </div>
             </div>
           </div>
@@ -179,38 +189,47 @@
           <div class="dark-mask custom_dark_mask"></div>
           <div class="container">
             <div class="row vertical_center_col">
-              <div class="col-md-6">
-                <h2 class="text-uppercase">CUBIERTA REMOVIBLE</h2>
-                <p class="mb-small">Las aletas de desgaste se encuentran dispuestas en una cubierta removible; con elementos de fijación de alta calidad. Lo cual permite el reemplazo de partes por daño o desgaste, sin realizar el desmonte del sello.</p>
-                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
-              </div>
-              <div class="col-md-6 text-center">
-                <img src="assets/img/sellos_para_muelles_de_carga/sellos_para_muelles_de_carga_1.png" alt="" class="img-responsive">
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="no-mb">
-        <div class="jumbotron">
-          <div class="dark-mask"></div>
-          <div class="container">
-            <div class="row vertical_center_col">
               <div class="col-sm-12 text-center">
-                <h2 class="text-uppercase">GAMA DE COLORES</h2>
+                <h1 class="text-uppercase">GAMA DE COLORES</h1>
                 <p class="mb-small">La fabricación de los sellos se realiza con cada combinación posible que se desee, de dos colores.</p>
               </div>
             </div>
             <div class="row vertical_center_col">
               <div class="col-md-12 text-center">
-                <img src="assets/img/sellos_para_muelles_de_carga/sellos_para_muelles_de_carga_7.png" alt="" class="img-responsive" style="display: inline;">
+                <img src="assets/img/sellos_para_muelles_de_carga/sellos_para_muelles_de_carga_7.png" alt="" class="img-responsive" >
                 <br>
-                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a> </p>
               </div>
             </div>
           </div>
         </div>
         <!-- *** JUMBOTRON END *** -->
+      </section>
+      <section class="no-mb">
+        <div class="jumbotron">
+          <div class="dark-mask "></div>
+          <div class="container">
+          <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">CARACTERÍSTICAS TÉCNICAS DE LA LONA</h1>
+              </div>
+              </div>
+            <div class="row vertical_center_col">
+              <div class="col-md-12 text-center">
+                <ul type="none" class="list_custom">
+                  <li><strong style="font-size: 30px">■ &nbsp; Material Lona:</strong> &nbsp; Resina Plástica de PVC </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Peso: </strong> &nbsp;900g/m2</li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Resistencia al Rasgado: </strong> &nbsp;(Largo) 34 kg/cm - (Ancho) 34 kg/cm
+ </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Elongación: </strong> &nbsp;28%</li>               
+                </ul>
+              </div>
+
+            </div>
+          </div>
+        </div>
       </section>
     </div>
     <div role="tabpanel" class="tab-pane" id="puerta_rapida">
@@ -233,7 +252,6 @@
                 <br>
                 <p class="mb-small">Ofrece una excelente resistencia en distintos escenarios de operación y una alta velocidad de apertura que permite un ritmo de trabajo sin interrupción. Es ideal para la separación de espacios con diferentes características y aplicaciones
                   como mantener la cadena de frío, protección de vientos, amortiguación de ruidos, almacenes, muelles de carga, hospitales entre otros. Garantiza seguridad para la mercancía, el personal y la maquinaria en ránsito.</p>
-                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
               </div>
             </div>
           </div>
@@ -272,11 +290,9 @@
                   <li> Mirillas en PVC Cristal</li>
                   <br>
                 </ul>
-                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
               </div>
               <div class="col-md-6 text-center">
                 <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
-                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
               </div>
             </div>
           </div>
@@ -316,7 +332,6 @@
                 </p>
               </div>
             </div>
-            <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
           </div>
         </div>
       </section>
@@ -380,7 +395,6 @@
             <div class="row vertical_center_col">
               <div class="col-md-6">
                 <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
-                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
               </div>
               <div class="col-md-6">
                 <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
@@ -400,7 +414,6 @@
               <div class="col-sm-12 text-center">
                 <h2 class="text-uppercase">GAMA DE COLORESL</h2>
                 <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
-                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
               </div>
             </div>
           </div>
