--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -32,10 +32,12 @@
           <div class="row">
             <form [formGroup]="registerForm" (ngSubmit)="registerUser(registerForm)" novalidate>
               <div class="col-xs-12">
+                <h4>Información General</h4>
+                <hr>
                 <div class="row">
                   <div class="col-xs-12 col-sm-6">
                     <div class="form-group">
-                      <label for="firstname">Nombres</label>
+                      <label for="firstname">Nombres <sup><i class="text-danger fa fa-asterisk"></i></sup></label>
                       <input type="text" class="form-control" id="firstname" formControlName="firstName">
                       <div class="alert alert-danger alert-sm border-flat" *ngIf="registerForm.controls.firstName.dirty && registerForm.controls.firstName.errors">
                         <ul class="list-unstyled">
@@ -48,7 +50,7 @@
                   </div>
                   <div class="col-xs-12 col-sm-6">
                     <div class="form-group">
-                      <label for="lastname">Apellidos</label>
+                      <label for="lastname">Apellidos <sup><i class="text-danger fa fa-asterisk"></i></sup></label>
                       <input type="text" class="form-control" id="lastname" formControlName="lastName">
                       <div class="alert alert-danger alert-sm border-flat" *ngIf="registerForm.controls.lastName.dirty && registerForm.controls.lastName.errors">
                         <ul class="list-unstyled">
@@ -78,18 +80,28 @@
                 </div>
               </div>
               <div class="col-xs-12">
-                <div class="form-group">
-                  <label for="email">Correo electrónico</label>
-                  <input type="text" class="form-control" id="email" formControlName="email">
-                  <div class="alert alert-danger alert-sm border-flat" *ngIf="registerForm.controls.email.dirty &&  registerForm.controls.email.errors">
-                    <ul class="list-unstyled">
-                      <li *ngIf="registerForm.controls.email.hasError('required')">
-                        <span class="fa fa-exclamation"></span> Oops, este campo es requerido!
-                      </li>
-                      <li *ngIf="registerForm.controls.email.hasError('email')">
-                        <span class="fa fa-exclamation"></span> Oops, este campo debe contener un email valido!
-                      </li>
-                    </ul>
+                <div class="row">
+                  <div class="col-xs-12 col-sm-6">
+                    <div class="form-group">
+                      <label for="document">Documento de identidad</label>
+                      <input type="text" class="form-control" id="document" formControlName="document">
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-6">
+                    <div class="form-group">
+                      <label for="email">Correo electrónico <sup><i class="text-danger fa fa-asterisk"></i></sup></label>
+                      <input type="text" class="form-control" id="email" formControlName="email">
+                      <div class="alert alert-danger alert-sm border-flat" *ngIf="registerForm.controls.email.dirty &&  registerForm.controls.email.errors">
+                        <ul class="list-unstyled">
+                          <li *ngIf="registerForm.controls.email.hasError('required')">
+                            <span class="fa fa-exclamation"></span> Oops, este campo es requerido!
+                          </li>
+                          <li *ngIf="registerForm.controls.email.hasError('email')">
+                            <span class="fa fa-exclamation"></span> Oops, este campo debe contener un email valido!
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -97,7 +109,7 @@
                 <div class="row">
                   <div class="col-xs-12 col-sm-6">
                     <div class="form-group">
-                      <label for="password">Contraseña</label>
+                      <label for="password">Contraseña <sup><i class="text-danger fa fa-asterisk"></i></sup></label>
                       <input type="password" class="form-control" id="password" formControlName="password">
                       <div class="alert alert-danger alert-sm border-flat" *ngIf="registerForm.controls.password.dirty && registerForm.controls.password.errors">
                         <ul class="list-unstyled">
@@ -113,7 +125,7 @@
                   </div>
                   <div class="col-xs-12 col-sm-6">
                     <div class="form-group">
-                      <label for="confirmpassword">Confirmar contraseña</label>
+                      <label for="confirmpassword">Confirmar contraseña <sup><i class="text-danger fa fa-asterisk"></i></sup></label>
                       <input type="password" class="form-control" id="confirmpassword" formControlName="confirmPassword">
                       <div class="alert alert-danger alert-sm border-flat" *ngIf="registerForm.controls.confirmPassword.dirty && registerForm.controls.confirmPassword.errors">
                         <ul class="list-unstyled">
@@ -130,7 +142,31 @@
                 </div>
               </div>
               <div class="col-xs-12">
-                <button type="submit" class="btn btn-template-main pull-right" [disabled]="disabledForm()"><i class="fa fa-user-md"></i> {{ savingUser ? 'Registrando' : 'Registrarme' }}</button>
+                <h4>Información de Empresa</h4>
+                <hr>
+                <div class="row">
+                  <div class="col-xs-12 col-sm-6">
+                    <div class="form-group">
+                      <label for="enterprise">Empresa</label>
+                      <input type="text" class="form-control" id="enterprise" formControlName="enterprise">
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-6">
+                    <div class="form-group">
+                      <label for="nit">NIT</label>
+                      <input type="text" class="form-control" id="nit" formControlName="nit" [value]="registerForm.controls.enterprise.value ? registerForm.controls.nit.value : null" [readonly]="!registerForm.controls.enterprise.value">
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-6">
+                    <div class="form-group">
+                      <label for="rol">Rol en la Compañia</label>
+                      <input type="text" class="form-control" id="role" formControlName="role" [value]="registerForm.controls.enterprise.value ? registerForm.controls.role.value : null" [readonly]="!registerForm.controls.enterprise.value">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-12">
+                <button type="submit" class="btn btn-template-main pull-right" [disabled]="disabledForm()"><i class="fa fa-user-md"></i> {{ savingUser === true ? 'Registrando' : 'Registrarme' }}</button>
                 <span>Ya tienes una cuenta? <a href="javascript: void(0);" (click)="goToLogin()">Inicia sesión</a></span>
               </div>
             </form>
