--- a/src/app/pages/products/doors/doors.component.html
+++ b/src/app/pages/products/doors/doors.component.html
@@ -138,7 +138,7 @@
             </div>
             <div class="row vertical_center_col">
               <div class="col-md-12 text-center">
-                <img src="assets/img/sellos_para_muelles_de_carga/sellos_para_muelles_de_carga_4.png" alt="" class="img-responsive" style="display: inline;">>
+                <img src="assets/img/sellos_para_muelles_de_carga/sellos_para_muelles_de_carga_4.png" alt="" class="img-responsive" style="display: inline;">
               </div>
             </div>
           </div>
@@ -244,7 +244,7 @@
             </div>
             <div class="row vertical_center_col">
               <div class="col-md-6 text-center">
-                <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
+                <img src="assets/img/puerta_rapida_enrollable/puerta_rapida_enrollable_1.png" alt="" class="img-responsive">
               </div>
               <div class="col-md-6">
                 <h2 class="text-uppercase">¿Por qué usarlo?</h2>
@@ -263,38 +263,36 @@
           <div class="container">
             <div class="row vertical_center_col">
               <div class="col-md-12">
-                <h2 class="text-uppercase">LONA</h2>
+                <h1 class="text-uppercase">LONA</h1>
+                <img src="assets/img/puerta_rapida_enrollable/puerta_rapida_enrollable_2.png" alt="" class="img-responsive">
                 <p class="mb-small">Compuesta de PVC flexible de alta calidad y resistencia por ambas caras, con un peso de 900gr/m2. Sus principales características entorno a la industria y la seguridad son:</p>
               </div>
             </div>
             <div class="row vertical_center_col">
               <div class="col-md-6">
-                <ul type=d isk style="font-size: 21px; font-weight: 400">
-                  <li> Impermeabilidad </li>
+                <ul type="none" class="list_custom" >
+                  <li> ■ &nbsp;  Impermeabilidad</li>
                   <br>
-                  <li>Sellabilidad </li>
+                  <li> ■ &nbsp;  Sellabilidad</li>
                   <br>
-                  <li> Resistencia a Rayos Solares UV </li>
+                  <li> ■ &nbsp;  Resistencia a Rayos Solares UV</li>
                   <br>
-                  <li> - Protección Biosida</li>
+                  <li> ■ &nbsp;  Protección Biosida</li>
                   <br>
                 </ul>
               </div>
               <div class="col-md-6">
-                <ul type=d isk style="font-size: 21px; font-weight: 400">
-                  <li> Ignífuga</li>
+                <ul type="none" class="list_custom" >
+                  <li> ■ &nbsp;  Ignífuga</li>
                   <br>
-                  <li> Resistencia a Diversos productos - Sellabilidad químicos
-                  </li>
+                  <li> ■ &nbsp;   Resistencia a Diversos productos - Sellabilidad químicos</li>
                   <br>
-                  <li> Mirillas en PVC Cristal</li>
+                  <li> ■ &nbsp;   Mirillas en PVC Cristal</li>
                   <br>
                 </ul>
               </div>
-              <div class="col-md-6 text-center">
-                <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
-              </div>
             </div>
+
           </div>
         </div>
       </section>
@@ -304,30 +302,26 @@
           <div class="container">
             <div class="row vertical_center_col">
               <div class="col-md-12">
-                <h2 class="text-uppercase">CONTROL</h2>
+                <h1 class="text-uppercase">CONTROL</h1>
+                <img src="assets/img/puerta_rapida_enrollable/puerta_rapida_enrollable_3.png" alt="" class="img-responsive">
                 <p class="mb-small">La Puerta Rápida Enrollable cuenta con distintos sistemas de control</p>
               </div>
             </div>
             <div class="row vertical_center_col">
-              <div class="col-md-6 text-center">
-                <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
-              </div>
               <div class="col-md-6">
-                <h3 class="text-uppercase">Pulsadores</h3>
+                <h2 class="text-uppercase">Pulsadores</h2>
                 <p class="mb-small">El sistema de control se instala a un costado de la puerta y constituye pulsadores para:</p>
-                <ul type=d isk style="font-size: 21px; font-weight: 400">
-                  <li> Subir </li>
-                  <li> Bajar </li>
-                  <li> Detener </li>
-                  <li> Hongo de seguridad </li>
-                </ul>
+                  <p class="list_custom"> ■ &nbsp;  Subir</p>
+                  <p class="list_custom"> ■ &nbsp;  Bajar</p>
+                  <p class="list_custom"> ■ &nbsp;  Detener</p>
+                  <p class="list_custom"> ■ &nbsp;  Hongo de seguridad </p>
               </div>
               <div class="col-md-6">
-                <h3 class="text-uppercase">Manual</h3>
+                <h2 class="text-uppercase">Manual</h2>
                 <p class="mb-small">Se encuentra acoplado directamente al motor que controla la puerta y es accionado implementando una llave bristol 3/16”, para enrollar o desenrollar el telón.</p>
               </div>
               <div class="col-md-6">
-                <h3 class="text-uppercase">Automático</h3>
+                <h2 class="text-uppercase">Automático</h2>
                 <p class="mb-small">Posee un sensor de presencia en el cabezal de la puerta para personal y maquinaria, que permite la apertura de la misma. Es opcional colocarlo en ambos lados de la puerta.
                 </p>
               </div>
@@ -341,66 +335,19 @@
           <div class="container">
             <div class="row vertical_center_col">
               <div class="col-md-12">
-                <h2 class="text-uppercase">ACCESORIOS</h2>
-                <p class="mb-small">Las solapas de desgaste se encuentran disponibles con una exposición de:</p>
-                <br>
+                <h1 class="text-uppercase">SEGURIDAD</h1>
+                <p class="mb-small">Se implementan dos sistemas de seguridad estándar para garantizar la seguridad del personal, mercancía y maquinaria:</p>
               </div>
             </div>
             <div class="row vertical_center_col">
               <div class="col-md-6">
-                <ul class="list-inline" type="disk" style="font-size: 21px; font-weight: 400">
-                  <li>
-                    <strong>
-                                            <h3> Interruptor de Tirador</h3>
-                                        </strong> La puerta se abre cuando se hala de una cuerda situada encima de ésta.
-                  </li>
-                  <li>
-                    <strong>
-                                            <h3> Mando a Distancia</h3>
-                                        </strong> Capacidad de 15 mandos por puerta a una distancia máx de 152 m
-                  </li>
-                  <li>
-                    <strong>
-                                            <h3>Fotocélulas</h3>
-                                        </strong> La puerta se abre cuando se interrumpe el haz de las fotocélulas, situadas frente a la puerta.
-                  </li>
-                  <li>
-                    <strong>
-                                            <h3>Apertura / Cierre parcial</h3>
-                                        </strong> (Apertura parcial para paso peatonal y apertura completa para paso de maquinaria y/o mercancía)
-                  </li>
-                </ul>
-                <br>
-              </div>
-              <div class="col-md-6 text-center">
-                <ul class="list-inline" type="disk" style="font-size: 21px; font-weight: 400">
-                  <li>
-                    <strong>
-                                            <h3>Apertura / Cierre mientras se mantiene el pulsador </h3>
-                                        </strong>
-                  </li>
-                  <li>
-                    <strong>
-                                            <h3>Luces de Aviso</h3>
-                                        </strong> Indica el estado actual de la puerta, dependiendo del color y permanencia de la luz (intermitencia o no)
-                  </li>
-                  <li>
-                    <strong>
-                                            <h3>Señal Acústica </h3>
-                                        </strong> Se emite un sonido durante el movimiento de la puerta.
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="row vertical_center_col">
-              <div class="col-md-6">
-                <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
+                <h2 class="text-uppercase">Fotocélulas</h2>
+                <p class="mb-small">Si se interrumpe el haz que emiten las fotocélulas durante el cierre, la puerta se detendrá y volverá a abrirse completamente.</p>
               </div>
               <div class="col-md-6">
-                <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
-              </div>
-              <div class="col-md-6">
-                <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
+                <h2 class="text-uppercase">Barra de Seguridad</h2>
+                <p class="mb-small"> Se encuentra ubicada en la parte inferior del telón (borde). En caso de chocar con algún obstáculo durante el cierre, la puerta se detendrá y  olverá a abrirse completamente.
+                </p>
               </div>
             </div>
           </div>
@@ -408,13 +355,136 @@
       </section>
       <section class="no-mb">
         <div class="jumbotron">
-          <div class="dark-mask"></div>
+          <div class="dark-mask "></div>
+          <div class="container">
+            <div class="row vertical_center_col">
+              <div class="col-md-12">
+                <h1 class="text-uppercase">ESTRUCTURA</h1>
+                <p class="mb-small">Guías laterales y cabezal en aluminio anodizado o lacado, que se fija a la pared con tornillos en acero galvanizado o inoxidable.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="no-mb">
+        <div class="jumbotron">
+          <div class="dark-mask custom_dark_mask"></div>
+          <div class="container">
+            <div class="row vertical_center_col">
+              <div class="col-md-12">
+                <h1 class="text-uppercase">FUNCIONAMIENTO</h1>
+                
+              </div>
+            </div>
+            <div class="row vertical_center_col">
+              <div class="col-md-6">
+                <p class="mb-small"> ■ &nbsp; El sistema de apertura y cierre de la puerta cuenta con finales de carrera mecánicos rotativos, lo que garantiza un posicionamiento correcto y seguro en todo momento del telón, evitando errores con detenciones inesperadas de seguridad o falta de suministro de energía eléctrica.</p>
+                <p class="mb-small"> ■ &nbsp; El tiempo de espera para el cierre automático es ajustable en el panel de control, dispuesto a un costado de la puerta.
+                </p>
+              </div>
+              <div class="col-md-6">
+                    <img src="assets/img/puerta_rapida_enrollable/puerta_rapida_enrollable_4.png" alt="" class="img-responsive">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="no-mb">
+        <div class="jumbotron">
+          <div class="dark-mask "></div>
+          <div class="container">
+            <div class="row vertical_center_col">
+              <div class="col-md-12">
+                <h2 class="text-uppercase">ACCESORIOS</h2>
+                <p class="mb-small">Las solapas de desgaste se encuentran disponibles con una exposición de:</p>
+                <br>
+              </div>
+            </div>
+            <div class="row vertical_center_col">
+              <div class="col-md-6">
+                <ul type="none" class="list_custom">
+                  <li><strong style="font-size: 30px">■ &nbsp;Interruptor de Tirador:</strong> &nbsp;  La puerta se abre cuando se hala de una cuerda situada encima de ésta. </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Mando a Distancia: </strong> &nbsp;Capacidad de 15 mandos por puerta a una distancia máx de 152 m</li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Fotocélulas: </strong> &nbsp;La puerta se abre cuando se interrumpe el haz de las fotocélulas, situadas frente a la puerta.
+ </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp;Apertura / Cierre parcial: </strong> &nbsp;(Apertura parcial para paso peatonal y apertura completa para paso de maquinaria y/o mercancía)</li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp;Apertura / Cierre mientras se mantiene el pulsador</strong></li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Luces de Aviso: </strong> &nbsp;Indica el estado actual de la puerta, dependiendo del color y permanencia de la luz (intermitencia o no)
+ </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp;Señal Acústica : </strong> &nbsp;Se emite un sonido durante el movimiento de la puerta.</li>                
+                </ul>
+                </div>
+                <div class="col-md-6">
+                <img src="assets/img/puerta_rapida_enrollable/puerta_rapida_enrollable_5.png" alt="" class="img-responsive">
+                 <img src="assets/img/puerta_rapida_enrollable/puerta_rapida_enrollable_6.png" alt="" class="img-responsive">
+                  <img src="assets/img/puerta_rapida_enrollable/puerta_rapida_enrollable_7.png" alt="" class="img-responsive">
+              </div>
+
+
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="no-mb">
+        <div class="jumbotron">
+          <div class="dark-mask custom_dark_mask"></div>
           <div class="container">
             <div class="row vertical_center_col">
               <div class="col-sm-12 text-center">
-                <h2 class="text-uppercase">GAMA DE COLORESL</h2>
-                <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
+                <h2 class="text-uppercase">GAMA DE COLORES</h2>
+                <img src="assets/img/puerta_rapida_enrollable/puerta_rapida_enrollable_8.png" alt="" class="img-responsive">
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="no-mb">
+        <div class="jumbotron">
+          <div class="dark-mask "></div>
+          <div class="container">
+          <div class="row vertical_center_col">
+              <div class="col-sm-12 text-center">
+                <h1 class="text-uppercase">CARACTERÍSTICAS TÉCNICAS DE LA LONA</h1>
+              </div>
+              </div>
+            <div class="row vertical_center_col">
+              <div class="col-md-12 text-center">
+                <ul type="none" class="list_custom">
+                  <li><strong style="font-size: 30px">■ &nbsp; Velocidad:</strong> &nbsp;  Apertura y cierre constante, desde 0,8 m/s hasta 1,2m/s </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Vida Útil:  </strong> &nbsp;1 000 000 de ciclos.</li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Material Lona:  </strong> &nbsp; Resina Plástica de PVC
+ </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Peso Lona: </strong> &nbsp;900g/m2</li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Resistencia al Rasgado:</strong> &nbsp; (Largo) 34 kg/cm - (Ancho) 34 kg/cm</li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Elongación:</strong> &nbsp;28%</li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp;Material Transparente:  </strong> &nbsp; 100% Polyester
+ </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Peso:  </strong> &nbsp; 115g/m2li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Resistencia al Rasgado:</strong> &nbsp; (Largo) 80 kg/25mm - (Ancho) 74 kg/25mm. </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Elongación:  </strong> &nbsp; 32%</li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Motor:  </strong> &nbsp;  220 VAC - 3 PH - 60 Hz
+ </li>
+                  <br>
+                  <li><strong style="font-size: 30px">■ &nbsp; Sensores:  </strong> &nbsp;12 - 24 VDC</li>                                
+                </ul>
+              </div>
+
             </div>
           </div>
         </div>
