--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -195,46 +195,34 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <th># 1735</th>
-                      <td>22/06/2013</td>
-                      <td>Puerta1</td>
-                      <th>3</th>
-                      <td><span class="label label-info">Being prepared</span>
+                    <tr *ngFor="let quotation of quotations">
 
+                      <th># {{quotation.pedidoid}}</th>
+                      <td>{{quotation.date}}</td>
+                      <td>{{quotation.productid}}</td>
+                      <th>{{quotation.quantity}}</th>
+                      <td>
+                        <span class="label label-success" *ngIf="quotation.state === '1'">
+                          Cotizacion Terminada
+                        </span>
+                        <span class="label label-primary" *ngIf="quotation.state === '2'">
+                          Enviando al Correo
+                        </span>
+                        <span class="label label-info" *ngIf="quotation.state === '3'">
+                          Generando Cotización
+                        </span>
+                        <span class="label label-warning" *ngIf="quotation.state === '2'">
+                          Generando Modelos
+                        </span>
+                        <span class="label label-danger" *ngIf="quotation.state === '1'">
+                          Sin Procesar
+                        </span>
+                        <span class="label label-default" *ngIf="quotation.state === NULL">
+                          UNDEFINED
+                        </span>
+                      </td>
                     </tr>
-                    <tr>
-                      <th># 1735</th>
-                      <td>22/06/2013</td>
-                      <td>carroA</td>
-                      <th>3</th>
-                      <td><span class="label label-info">Being prepared</span>
 
-                    </tr>
-                    <tr>
-                      <th># 1735</th>
-                      <td>22/06/2013</td>
-                      <td>volqueta</td>
-                      <th>3</th>
-                      <td><span class="label label-success">Received</span>
-
-                    </tr>
-                    <tr>
-                      <th># 1735</th>
-                      <td>22/06/2013</td>
-                      <td>maquina</td>
-                      <th>3</th>
-                      <td><span class="label label-danger">Cancelled</span>
-
-                    </tr>
-                    <tr>
-                      <th># 1735</th>
-                      <td>22/06/2013</td>
-                      <td>carro2</td>
-                      <th>3</th>
-                      <td><span class="label label-warning">On hold</span>
-
-                    </tr>
                   </tbody>
                 </table>
               </div>
@@ -250,14 +238,6 @@
     </div>
     <!-- /.col-md-9 -->
 
-    <!-- *** LEFT COLUMN END *** -->
-
-    <!-- *** RIGHT COLUMN ***
-			 _________________________________________________________ -->
-
-
-
-    <!-- *** RIGHT COLUMN END *** -->
 
   </div>
   <!-- /.row -->
